# QDBFRedactor

./: .gitignore  CMakeLists.txt  QDBFRedactor.pro  languages.bat  qdbfredactor.rc  resource.qrc  translations.bat
examples/: example.dbf
share/translations/: qdbfredactor_ru.ts
src/: dbfredactor.cpp  dbfredactor.h  dbfredactordelegate.cpp  dbfredactordelegate.h  dbfredactormainwindow.cpp  dbfredactormainwindow.h  dbfredactormodel.cpp  dbfredactormodel.h  dbfredactorpage.h  dbfredactorsortfilterproxymodel.cpp  dbfredactorsortfilterproxymodel.h  filterdelegate.h  filterdialog.cpp  filterdialog.h  main.cpp  sortdialog.cpp  sortdialog.h  translationmanager.cpp  translationmanager.h
src/3dparty/qtsingleapplication/src/: qtlocalpeer.cpp
src/core/: dbffield.cpp  dbffield.h  dbfheader.cpp  dbfheader.h  dbfrecord.cpp  dbfrecord.h  dbfredactor.cpp  dbfredactor.h  dbfredactorcore.h  dbfredactormodel.cpp  dbfredactormodel.h  dbfredactorsortfilterproxymodel.cpp
src/dialogs/: aboutdialog.cpp  aboutdialog.h  filterdialog.cpp  filterdialog.h  sortdialog.cpp  structdialog.cpp  structdialog.h
src/preferences/: abstractpreferencespage.h  displaypreferences.cpp  displaypreferences.h  globalpreferences.cpp  globalpreferences.h  languagepreferences.cpp  languagepreferences.h  preferencesdialog.cpp  preferencesdialog.h
src/widgets/: qtcolorbutton.cpp  qtcolorbutton.h  qtfontbutton.cpp  qtfontbutton.h
